# ed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: aabb.cpp  aabb.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vector.h  vertex.h
src/old/: ed.h  main.cpp  model.h  rasterizer.h
